[gd_scene load_steps=6 format=4 uid="uid://cpx5fm80mnnd5"]

[ext_resource type="Script" uid="uid://bh2jpiv01l5wc" path="res://Prefab/GUI/DialogBox/DailyChallenge/Calendar/Calendar.gd" id="1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gw15o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g813g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_il5y5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tiwmu"]

[node name="Calendar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gw15o")

[node name="CalendarContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MonthYearContainer" type="HBoxContainer" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_g813g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_il5y5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tiwmu")
text = "<"

[node name="MonthYear" type="Label" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "2025/六月"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_g813g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_il5y5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tiwmu")
text = ">"

[node name="Dates" type="GridContainer" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
columns = 7
